<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Dream Diary</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_compose">Compose</string>

    <!-- test page -->
    <string name="test_login_activity_button">Test Login</string>
    <string name="test_record_activity_button">Test Record</string>
    <string name="test_register_activity_button">Test Register</string>
    <string name="test_share_activity_button">Test share</string>

    <!-- main -->
    <string name="dream_record">Record</string>
    <string name="dream_diary">Diary</string>
    <string name="dream_explore">Explore</string>
    <string name="dream_about_me">Me</string>

    <!-- login page -->
    <string name="username_text_view">Username:</string>
    <string name="username">Please Enter Your Email Address</string>
    <string name="username_edit_text"></string>
    <string name="password_text_view">Password: </string>
    <string name="password">Please Enter Your Password</string>
    <string name="password_edit_text"></string>
    <string name="login_button">Login </string>
    <string name="facebook_login_button">Login with Facebook </string>
    <string name="register_button">Register</string>
    <string name="skip_button">Skip </string>

    <!-- register page -->
    <string name="create_account_text_view">Create a Mengker Account</string>
    <string name="add_username_edit_text">Username</string>
    <string name="add_username">Register with Email Address</string>
    <string name="add_email_edit_text">Email Address</string>
    <string name="add_password_edit_text">Passward</string>
    <string name="repassword_edit_text">Re-password</string>
    <string name="create_button">Create</string>

    <!-- record -->
    <string name="done_button">Done</string>
    <string name="more_option_button">More Option</string>
    <string name="normal_radioButton">Normal</string>
    <string name="Half_lucid_radioButton">Half Lucid</string>
    <string name="lucid_radioButton">Lucid</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_record">RecordActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_index">IndexActivity</string>
    <string name="title_activity_edit_dream">EditDreamActivity</string>
    <string name="test_dream_record">Test</string>
    <string name="text_record">Text</string>
    <string name="save_dream">Save</string>
    <string name="voice_record">Voice Record</string>
    <string name="add_photo">Add Photo</string>
    <string name="more_option">More Option</string>
    <string name="location_place">Location Place</string>
    <!-- Diary -->

    <string name="create_new_dream_diary">Create a New Dream Diary</string>

    <!-- Dream Edit -->
    <string name="dream_edit">Edit the dream</string>
    <string name="dream_remove">Remove the dream</string>
    <string name="dream_share">Share the dream</string>

    <!-- Dream View -->
    <string name="dream_title">Dream Title</string>
    <string name="dream_create_time">Create Time</string>

    <!-- Dream Share -->
    <string name="dream_user_name">Dream User Name</string>
    <string name="dream_user_detail">Dream Detail</string>
    <string name="dream_user_post_date">post date</string>
    
    <!-- MeActivity -->
    <string name="me_me">Me</string>
    <string name="me_facebook">My Facebook</string>
    <string name="me_dream_reports">My dream reports</string>
    <string name="me_settings">Settings</string>

    <!-- welcome -->
    <string name="welcome_title_text">Dream Diray</string>
    <string name="welcome_subtitle_text">Welcome to a new dream world</string>
    <string name="welcome_subtitle_text1">A lucid dream is any dream</string>
    <string name="welcome_subtitle_text2">in which one is aware that one is dreaming</string>
    <string name="title_activity_share">ShareActivity</string>
    <string name="title_activity_diary_book">Diary Book</string>
    <string name="title_activity_dream_view">DreamView</string>
    <string name="title_activity_dream_edit">DreamEdit</string>
    <string name="title_activity_new_dream">New Dream</string>
    
    <string name="title_activity_me">Me Activity</string>
    <string name="title_activity_welcome_main">Welcome Main Activity</string>

</resources>
