<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/login_vertical_margin"
    android:paddingLeft="@dimen/login_horizontal_margin"
    android:paddingRight="@dimen/login_horizontal_margin"
    android:paddingTop="@dimen/login_vertical_margin"
    tools:context=".LoginActivity" >
    
    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/usernameTextView"
        android:layout_alignBottom="@+id/usernameTextView"
        android:layout_toRightOf="@+id/usernameTextView"
        android:ems="10"
        android:inputType="text"
        android:text="@string/username_edit_text" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/usernameEditText"
        android:layout_toRightOf="@+id/usernameTextView"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/skipButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/passwordEditText"
        android:text="@string/skip_button" />

    <TextView
        android:id="@+id/usernameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/loginButton"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="74dp"
        android:layout_marginLeft="27dp"
        android:text="@string/username_text_view" />

    <TextView
        android:id="@+id/paswordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/passwordEditText"
        android:layout_alignLeft="@+id/usernameTextView"
        android:text="@string/password_text_view" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/skipButton"
        android:layout_alignLeft="@+id/paswordTextView"
        android:layout_marginBottom="161dp"
        android:layout_marginLeft="26dp"
        android:text="@string/login_button" />

    <Button
        android:id="@+id/facebookLoginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/loginButton"
        android:layout_alignTop="@+id/loginButton"
        android:layout_marginTop="58dp"
        
        android:text="@string/facebook_login_button" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/facebookLoginButton"
        android:layout_below="@+id/facebookLoginButton"
        android:layout_marginTop="14dp"
        android:text="@string/register_button" />

</RelativeLayout>
