<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".RecordActivity" >

    <Button
        android:id="@+id/doneButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/done_button" />

    <Button
        android:id="@+id/moreOptionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/doneButton"
        android:layout_alignBottom="@+id/doneButton"
        android:layout_alignParentRight="true"
        android:text="@string/more_option_button" />

    <RadioGroup
        android:id="@+id/lucidityRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/doneButton"
        android:layout_below="@+id/doneButton"
        android:layout_marginTop="16dp" >

        <RadioButton
            android:id="@+id/normalRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/normal_radioButton" />

        <RadioButton
            android:id="@+id/halfLucidRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Half_lucid_radioButton" />

        <RadioButton
            android:id="@+id/lucidRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lucid_radioButton" />
    </RadioGroup>

    <TextView
        android:id="@+id/testDreamRecordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lucidityRadioGroup"
        android:layout_below="@+id/lucidityRadioGroup"
        android:layout_marginTop="24dp"
        android:text="ForTest" />

</RelativeLayout>
