<?xml version="1.0"  encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <FrameLayout 
    	android:id="@android:id/tabcontent"
    	android:layout_width="fill_parent"
    	android:layout_height="0.0dip"
    	android:layout_weight="1.0">
	</FrameLayout>
    <TabWidget 
    		android:id="@android:id/tabs"
    		android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
    		android:layout_weight="0.0"
    		android:visibility="gone"/>
    	<RadioGroup
    		android:id="@+id/dreamRecordTab"
    		android:background="@drawable/amsu_menu_toolbar_bg"
    		android:orientation="horizontal"
    		android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
    		android:gravity="center_vertical"
    		android:layout_gravity="bottom">
    		<RadioButton 
    			android:layout_marginTop="1.0dip"
    			android:text="@string/dream_record"
    			android:drawableTop="@drawable/btn_write_selector"
    			android:id="@+id/radio_button0"
    			style="@style/main_tab_bottom"/>
    		<RadioButton 
    			android:layout_marginTop="1.0dip"
    			android:text="@string/dream_diary"
    			android:drawableTop="@drawable/logo_ss"
    			android:id="@+id/radio_button1"
    			style="@style/main_tab_bottom"/>
    		<RadioButton 
    			android:layout_marginTop="1.0dip"
    			android:text="@string/dream_explore"
    			android:drawableTop="@drawable/amsu_menu_search"
    			android:id="@+id/radio_button2"
    			style="@style/main_tab_bottom"/>
    		<RadioButton 
    			android:layout_marginTop="1.0dip"
    			android:text="@string/dream_about_me"
    			android:drawableTop="@drawable/amsu_menu_user"
    			android:id="@+id/radio_button3"
    			style="@style/main_tab_bottom"/>
    	</RadioGroup>
    
</LinearLayout>
