<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".IndexActivity" >
    
     <Button
        android:id="@+id/testShareActivityButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test_share_activity_button" 
        android:onClick="startShareActivity"/>

     <Button
         android:id="@+id/testLoginActivityButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/testShareActivityButton"
         android:layout_below="@+id/testShareActivityButton"
         android:onClick="startLoginActivity"
         android:text="@string/test_login_activity_button" />

     <Button
         android:id="@+id/testRegisterActivityButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/testLoginActivityButton"
         android:layout_below="@+id/testLoginActivityButton"
         android:onClick="startRegisterActivity"
         android:text="@string/test_register_activity_button" />

     <Button
         android:id="@+id/testRecordActivityButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/testRegisterActivityButton"
         android:layout_below="@+id/testRegisterActivityButton"
         android:onClick="startRecordActivity"
         android:text="@string/test_record_activity_button" />

     <Button
         android:id="@+id/testDreamsActivityButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/testRecordActivityButton"
         android:layout_below="@+id/testRecordActivityButton"
         android:onClick="startDreamsActivity"
         android:text="Test Dreams Activity" />

</RelativeLayout>