<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:visibility="visible" >

    <TextView
        android:id="@+id/dreamDetailstextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/userPhotoImageView"
        android:layout_below="@+id/userPhotoImageView"
        android:layout_marginTop="24dp"
        android:text="@string/dream_user_detail"
        android:textColor="#000000"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ImageView
        android:id="@+id/userPhotoImageView"
        android:layout_width="wrap_content"
        android:contentDescription="userPic"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="19dp"
        android:maxHeight="20dp" />

    <TextView
        android:id="@+id/userNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/userPhotoImageView"
        android:layout_marginLeft="31dp"
        android:layout_toRightOf="@+id/userPhotoImageView"
        android:text="@string/dream_user_name"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/dateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/dreamDetailstextView"
        android:layout_marginTop="16dp"
        android:text="@string/dream_user_post_date"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#000000" />

</RelativeLayout>
