<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android1="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
	
    <TabWidget 
    		android:id="@android:id/tabs"
    		android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
    		android:layout_weight="0.0"
    		android:visibility="gone"/>

    	<RadioGroup
    	    android:id="@+id/main_tab"
    	    android:layout_width="fill_parent"
    	    android:layout_height="wrap_content"
    	    android:layout_gravity="bottom"
    	    android:background="#000000"
    	    android:orientation="horizontal" >

     		<ImageView
     		    android:layout_width="wrap_content"
     		    android:layout_height="wrap_content"
     		    android:src="@drawable/amsu_menu_user"
     		    android:contentDescription="@string/user_photo" >
	        </ImageView>
    		
    	</RadioGroup>
   	<LinearLayout
   	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical">

   		<Button
   		    android1:id="@+id/createNewDreamDiary"
   		    android1:layout_width="fill_parent"
   		    android1:layout_height="wrap_content"
   		    android1:text="@string/create_new_dream_diary" />
   		    		
   	</LinearLayout>

   	<FrameLayout
   	    android:id="@android:id/tabcontent"
   	    android:layout_width="fill_parent"
   	    android:layout_height="0.0dip"
   	    android:layout_weight="34.40" >

	</FrameLayout>
   	<TabWidget 
    		android:id="@android:id/tabs"
    		android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
    		android:layout_weight="0.0"
    		android:visibility="gone"/>

   	<RadioGroup
   	    android1:id="@+id/diaryToolBar"
   	    android1:layout_width="fill_parent"
   	    android1:layout_height="wrap_content"
   	    android1:layout_weight="0.0"
   	    android1:background="@drawable/amsu_menu_toolbar_bg"
   	    android1:gravity="center_vertical"
   	    android1:orientation="horizontal" >

   	    <RadioButton
   	        android1:id="@+id/radio_button1"
   	        style="@style/main_tab_bottom"
   	        android1:layout_marginTop="1.0dip"
   	        android1:drawableTop="@drawable/logo_ss"
   	        android1:text="@string/dream_diary" />

   	    <RadioButton
   	        android1:id="@+id/radio_button2"
   	        style="@style/main_tab_bottom"
   	        android1:layout_marginTop="1.0dip"
   	        android1:drawableTop="@drawable/amsu_menu_search"
   	        android1:text="@string/dream_explore" />

   	    <RadioButton
   	        android1:id="@+id/radio_button3"
   	        style="@style/main_tab_bottom"
   	        android1:layout_marginTop="1.0dip"
   	        android1:drawableTop="@drawable/amsu_menu_user"
   	        android1:text="@string/dream_about_me" />
   	</RadioGroup>

</LinearLayout>